[FIXED] scrollbar_on_mobiles

--- a/style_ege_page.css
+++ b/style_ege_page.css
@@ -66,8 +66,9 @@ p.card-text{
     
     width: 100%;
     height: 30rem;
-    overflow: hidden;
+    overflow:scroll;
     display: block;
+ 
   
 }
 
@@ -76,13 +77,14 @@ p.card-text{
     top: 0;
     left: 0px;
     height: 100%;
-    width: 100%;
+    width: 200%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 4rem;
-    pointer-events: none;
+    pointer-events:none;
     transition: 0.1s ease-out;
     margin-left: 10px ;
+
 }
 
 .block{
@@ -99,5 +101,6 @@ p.card-text{
     
     align-items: center;
     justify-content: center;
+    
     
 }
